# sfo

./: .gitignore  CMakeLists.txt
.github/workflows/: build-macos.yml
